--- a/backend/views/cart.ejs
+++ b/backend/views/cart.ejs
@@ -339,23 +339,9 @@
             alert('Problème AJAX');
           }
         });
-        /*
-        $.ajax({
-          type: 'GET',
-          url: '/cart/initialisationGoldPSEtDiamantPS',
-          success: function(goldsec,diamsec) {
-            goldPS = goldsec;
-            totalGoldPS.textContent = goldPS;
-            diamantPS = diamsec;
-            totalDiamantPS.textContent = diamantPS;
-          },
-          error: function() {
-            alert('Problème AJAX');
-          }
-        });*/
 				goldPS=1000;
 				gold=null;
-        diamantPS=100;
+        diamantPS=10000;
 				diamant=null;
 				ObjInterval = null,
 				totalGold = document.querySelector( "#totalGold" ),
@@ -426,7 +412,7 @@
           <div class="system-settings">
             <form action="" method="post" role="form">
               <div>
-                <button type="button">
+                <button type="button" onclick="openGuidePopUp()">
                   <div style="height:20px;width:20px;object-fit:contain;">
                     <img src="assets/img/settings.png">
                   </div>
@@ -465,8 +451,7 @@
                   </tr>
                 </thead>
             </table>
-                <liste_heros v-for="heros in herosObtenus" v-bind:id_hero="heros.id_hero" v-bind:niveau="heros.niveau"/>
-                <!-- v-bind:element="hero.goldpersec" v-bind:element="hero.diamondspersec" -->
+                <liste_heros v-for="heros in herosObtenus" v-bind:id_hero="heros.id_hero" v-bind:niveau="heros.niveau" v-bind:cout="heros.cout"/>
             </div>
           </div>
         </div>
@@ -522,14 +507,7 @@
           </div>
         </div>
       </div>
-      <!-- <div class="character-image" style="background-image: url('assets/img/stickman.jpg')"></div>
-        <div class="character-info">
-              <div class="character">
-              <div class="character-name">Personnage 1</div>
-              <div class="character-stats">Niveau: 10</div>
-              <div class="character-stats">Gold/s: 100</div>
-              <div class="character-stats">Diamants/s: 50</div>
-        </div>
+
       </div> -->
     </div>
 
@@ -600,63 +578,47 @@
                   {{ cout }}
                 </td>
                 <td>
-                  <button style="background: v ar(--color-primary);border: 0; margin:5px; color: #fff; border-radius: 20px; background:red; border:0px" v-on:click="upgradeHeros()">++</button>
+                  <button id="buttonUpgrade" style="background: v ar(--color-primary);border: 0; margin:5px; color: #fff; border-radius: 20px; background:red; border:0px" v-on:click="upgradeHeros(id_hero)">++</button>
                 </td>
                 <td>
-                  {{ goldpersec }}
+                  {{ goldParSecComputed }}
                 </td>
                 <td>
-                  {{ diamondspersec }}
+                  {{diamondParSecComputed}}
                 </td>
               </tr>
             </tbody>
 					</table>`,
         
-				props: ["id_hero", "niveau","cout","goldpersec","diamondspersec"]
+				props: ["id_hero", "niveau","cout"],
+
+				methods:{
+         upgradeHeros: function() {
+            app.upgradeHeros(this.id_hero, this.niveau);
+            if (joueur.obtenirNiveau(this.id_hero) == 5) {
+              document.getElementById("buttonUpgrade").disabled = true;
+            }
+
+          },
+          niveauMax: function(niveau) {
+          console.log(!(niveau < 6));
+            return (niveau < 6);
+          }
+        },
+        computed: {
+           goldParSecComputed: function() {
+             console.log("this.id_hero");
+             console.log(this.id_hero);
+             return joueur.goldParSecComputed(this.id_hero, this.niveau);
+           },
+           diamondParSecComputed: function() {
+            console.log("this.id_hero");
+            console.log(this.id_hero);
+            return joueur.diamondParSecComputed(this.id_hero, this.niveau);
+           }
+        }
 	});
 
-
- /*
-  Vue.component('listecart',{ //A garder en commentaire car j'en aurai besoin pour plus tard
-
-  template:`<li v-bind:id="'item_'+id">
-      <button style="background: var(--color-primary);border: 0; color: #fff; border-radius: 20px; width:20px;" v-on:click="addItem()">+</button>  {{quantity}} <button style="background: var(--color-primary);border: 0; color: #fff; border-radius: 20px; width:20px;" v-on:click="removeItem()">-</button>
-      &#215; {{name }} ($ {{price}} each)
-     </li>`,
-  props:["id", "quantity", "name", "price"],
-
-  methods:{
-          addItem: function() {
-          console.log(this.id);
-            app.addItem(this.id);
-          },
-          removeItem: function() {
-          console.log(this.id);
-            app.removeItem(this.id);
-          },
-
-          estVide: function() {
-            app.estVide();
-          },
-
-        },
-
-})*/
-
-/*$(document).ready(function(){
-  $.ajax({
-    type: 'GET',
-    url: '/cart/initialisationHerosObtenus',
-    success: function(received) {
-    console.log("Pweeeet initialisationHerosObtenus");
-    console.log(received);
-    joueur.herosObtenus = received; //Sauvegarde des héros de la db dans herosObtenus
-   },
-    error: function() {
-      alert('Problème AJAX');
-    }
-  });
-});*/
 
 
 const joueur = new Vue({ //Vue du joueur
@@ -673,20 +635,170 @@ const joueur = new Vue({ //Vue du joueur
               }
             }
             return false;
-          }
+          },
+          obtenirHeros: function(id_hero) {//Fonction qui renvoie un héros en fonction de son id_hero
+            console.log("PWET obtenirHeros");
+            for (const herosObtenu of joueur.herosObtenus) {//Parcours de herosObtenus
+              if(herosObtenu['id_hero'] == id_hero) {
+                return herosObtenu['id_hero'];
+              }
+            }
+          },
+          obtenirRarete: function(id_hero) {
+            console.log("PWET obtenirRarete");
+            for (const herosObtenu of joueur.herosObtenus) {//Parcours de herosObtenus
+              if(herosObtenu['id_hero'] == id_hero) {
+                return herosObtenu['rarete'];
+              }
+            }
+          },
+          obtenirNiveau: function(id_hero) {
+            console.log("PWET obtenirNiveau");
+            for (const herosObtenu of joueur.herosObtenus) {//Parcours de herosObtenus
+              if(herosObtenu['id_hero'] == id_hero) {
+                return herosObtenu['niveau'];
+              }
+            }
+          },
+          augmenterNiveau: function(id_hero) {
+            console.log("PWET augmenterNiveau");
+            for (const herosObtenu of joueur.herosObtenus) {//Parcours de herosObtenus
+              if(herosObtenu['id_hero'] == id_hero) {
+                herosObtenu['niveau'] = herosObtenu['niveau'] + 1;
+              }
+            }
+          },
+          obtenirCoutHeros: function(id_hero) {
+            console.log("PWET obtenirCoutHeros");
+            for (const herosObtenu of joueur.herosObtenus) {//Parcours de herosObtenus
+              if(herosObtenu['id_hero'] == id_hero) {
+                return herosObtenu['cout'];
+              }
+            }
+          },
+          modifierCout: function(id_hero,cout) {
+          console.log("PWET modifierCout");
+          console.log(cout);
+            for (const herosObtenu of joueur.herosObtenus) {//Parcours de herosObtenus
+              if(herosObtenu['id_hero'] == id_hero) {
+                herosObtenu['cout'] = cout;
+                console.log("herosObtenu['cout'] = "+herosObtenu['cout']);
+              }
+            }
+          },
+
+          goldParSecComputed: function(id_hero,niveau) {
+            for (const herosObtenu of joueur.herosObtenus) {//Parcours de herosObtenus
+              console.log("herosObtenu.id_hero : "+herosObtenu['id_hero']);
+              console.log("id_hero : ");
+              console.log(id_hero);
+              console.log(niveau);
+              if(herosObtenu['id_hero'] == id_hero) {//Comparaison des id qui sont uniques
+                console.log("herosObtenu['niveau_'+herosObtenu['niveau']] :"+herosObtenu['niveau_'+herosObtenu['niveau']]);
+                return herosObtenu['niveau_'+herosObtenu['niveau']];
+              }
+            }
+          },
+          diamondParSecComputed: function(id_hero,niveau) {
+            for (const herosObtenu of joueur.herosObtenus) {//Parcours de herosObtenus
+              console.log("herosObtenu.id_hero : "+herosObtenu['id_hero']);
+              console.log("id_hero : ");
+              console.log(id_hero);
+              console.log(niveau);
+              if(herosObtenu['id_hero'] == id_hero) {//Comparaison des id qui sont uniques
+                console.log("herosObtenu['niveau_'+herosObtenu['niveau']] :"+herosObtenu['niveau_'+herosObtenu['niveau']]) / 10;
+                let temp = herosObtenu['niveau_'+herosObtenu['niveau']];
+                temp = temp / 10;
+                console.log("temp : "+temp);
+                return temp;
+              }
+            }
+          },
         },
         data:{
           herosObtenus:[],
         },
+        computed:{
+
+        }
   });
 
 $.ajax({
   type: 'GET',
   url: '/cart/initialisationHerosObtenus',
   success: function(received) {
-  console.log("Pweeeet initialisationHerosObtenus");
-  console.log(received);
-  joueur.herosObtenus = received; //Sauvegarde des héros de la db dans herosObtenus
+    console.log("Pweeeet initialisationHerosObtenus");
+    console.log(received);
+    let tabHerosObtenus = received;
+    //joueur.herosObtenus = received; //Sauvegarde des héros de la db dans herosObtenus
+    if (tabHerosObtenus.length == 0) {
+      $.ajax({
+             type: 'GET',
+             url: '/cart/initialisationHeros1',//Obtention d'un héros au hasard qui a la rareté demandée
+             success: function(received) {
+             console.log("Pweeeeet fin initialisationHeros1");
+               let tabHero = received;
+               console.log("tabHeros : ");
+               console.log(tabHero);
+               joueur.herosObtenus.push(tabHero);
+              console.log(joueur.herosObtenus);
+
+              },
+             error: function() {
+               alert('Problème AJAX');
+             },
+             })
+    }
+    else {
+      tabHerosObtenus.forEach(row =>$.ajax({
+             type: 'POST',
+             url: '/cart/initialisationHerosObtenuscoutEvolution',//Obtention d'un héros au hasard qui a la rareté demandée
+             data:"niveau="+row.niveau,//Envoie de la rareté
+             success: function(received) {
+//                console.log("tabHerosObtenus[row].niveau : ");
+//                console.log(tabHerosObtenus[row].niveau);
+//                console.log("Pweeeet Fin initialisationHerosObtenuscoutEvolution");
+//                console.log(received);
+               let cout = received;
+               row.cout = cout;
+//                console.log("tabHerosObtenus[row] : ");
+//                console.log(tabHerosObtenus[row]);
+//               joueur.herosObtenus.push(row);
+//                console.log(joueur.herosObtenus);
+              },
+             error: function() {
+               alert('Problème AJAX');
+             },
+             })
+             );
+        tabHerosObtenus.forEach(row =>$.ajax({
+          type: 'POST',
+          url: '/cart/initialisationHerosObtenusguidePerso',//Obtention d'un héros au hasard qui a la rareté demandée
+          data:"id_hero="+row.id_hero,//Envoie de la rareté
+          success: function(received) {
+            console.log("row.id_hero : ");
+            console.log(row.id_hero);
+            console.log("Pweeeet Fin initialisationHerosObtenusguidePerso");
+            console.log(received);
+            console.log("row : "+row);
+            let herosGuidePerso = received;
+            row.rarete = herosGuidePerso.rarete;
+            row.niveau_1 = herosGuidePerso.niveau_1;
+            row.niveau_2 = herosGuidePerso.niveau_2;
+            row.niveau_3 = herosGuidePerso.niveau_3;
+            row.niveau_4 = herosGuidePerso.niveau_4;
+            row.niveau_5 = herosGuidePerso.niveau_5;
+            console.log("row : ");
+            console.log(row);
+            joueur.herosObtenus.push(row)
+            console.log("joueur.herosObtenus");
+            console.log(joueur.herosObtenus);
+          },
+          error: function() {
+            alert('Problème AJAX');
+          }
+        }));
+    }
    },
     error: function() {
       alert('Problème AJAX');
@@ -702,12 +814,12 @@ const app = new Vue({ //Vue qui gère les invocations de héros
 
              $.ajax({
                type: 'POST',
-               url: '/cart/argentSuffisant',//Vérifie si le joueur a assez d'argent pour faire une invocation
-               data: "argent="+diamant,//Envoie de l'argent
+               url: '/cart/diamantSuffisant',//Vérifie si le joueur a assez de diamants pour faire une invocation
+               data: "diamant="+diamant,//Envoie des diamants
                success: function(received) {
-                 console.log("Pweeeet argentSuffisant");
+                 console.log("Pweeeet diamantSuffisant");
                  console.log(received);
-                 if (received) { //Si on a assez d'argent
+                 if (received) { //Si on a assez de diamant
                     diamant-=100;
                     let rarete = "";
                     $.get("/cart/rareteRandom", function (data, status, xhr) {//Obtention d'une rareté au hasard
@@ -725,14 +837,44 @@ const app = new Vue({ //Vue qui gère les invocations de héros
                               console.log("Pweeeet Fin triParRarete");
                               console.log(received);
                               let heros = received; //Sauvegarde du héros
+                              console.log(heros['rarete']);
                               console.log(joueur.possedeHeros(heros));
                               if (joueur.possedeHeros(heros)) { //Si le joueur possède déjà le héros
-                                console.log("Remboursement en cours."); //On rembourse le joueur d'un montant X selon la rareté
+                                  console.log("Remboursement en cours."); //On rembourse le joueur d'un montant X selon la rareté
+                                  $.ajax({
+                                  type: 'POST',
+                                  url: '/cart/remboursement',//Obtention d'un héros au hasard qui a la rareté demandée
+                                  data:"rarete="+heros['rarete'],//Envoie de la rareté
+                                  success: function(received) {
+                                    console.log("Pweeeet Fin remboursement");
+                                    console.log(received);
+                                    diamant+=parseInt(received,10);
+
+                                  },
+                                  error: function() {
+                                    alert('Problème AJAX');
+                                  }
+                                  });
                               }
                               else { //Si le joueur ne possède pas le héros
-                                joueur.herosObtenus.push(heros); //On ajoute le héros à herosObtenus
-                                console.log("Ajout d'un heros.");
-                                console.log(joueur.herosObtenus);
+                                $.ajax({
+                                      type: 'POST',
+                                      url: '/cart/ajoutInfosInvocationHeros',//Obtention d'un héros au hasard qui a la rareté demandée
+                                      data:"niveau="+heros['niveau'],//Envoie de la rareté
+                                      success: function(received) {
+                                        console.log("Pweeeet Fin ajoutInfosInvocationHeros");
+                                        console.log(received);
+                                        let cout = received;
+                                        heros.cout = cout;
+                                        joueur.herosObtenus.push(heros); //On ajoute le héros à herosObtenus
+                                        console.log("Ajout d'un heros.");
+                                        console.log(joueur.herosObtenus);
+                                      },
+                                      error: function() {
+                                        alert('Problème AJAX');
+                                      }
+                                      });
+
                               }
                               totalDiamant.innerText = diamant;
                             },
@@ -753,19 +895,58 @@ const app = new Vue({ //Vue qui gère les invocations de héros
             });
 
           },
-        },
-    })
+          upgradeHeros: function(id_hero) {
+            console.log("totalGold : "+totalGold.innerText);
+            let cout = joueur.obtenirCoutHeros(id_hero);
+            if (totalGold.innerText >= cout) {
+              joueur.augmenterNiveau(id_hero);
+
+              $.ajax({
+                  type: 'POST',
+                  url: '/cart/ajoutInfosInvocationHeros',//Obtention d'un héros au hasard qui a la rareté demandée
+                  data:"niveau="+joueur.obtenirNiveau(id_hero),//Envoie de la rareté
+                  success: function(received) {
+                    console.log("Pweeeet Fin ajoutInfosInvocationHeros");
+                    console.log("Received : "+received);
+                    joueur.modifierCout(id_hero, received);
+                    console.log("Cout : "+joueur.obtenirCoutHeros(id_hero));
+                    totalGold.textContent-=parseInt(cout,10);
+                  },
+                  error: function() {
+                    alert('Problème AJAX');
+                  }
+                });
+            }
+            else {
+              window.alert("Il n'y a pas assez d'argent pour augmenter le niveau d'un heros ! Attendez d'avoir plus de gold."); //Message d'alerte pour signaler au joueur qu'il n'a pas assez d'argent
+            }
+              },
+            },
+            });
 
 </script>
 
-<!--<script>
-
-function invocationHeros(){
-      console.log("invocationHeros");
-      console.log(totalGold.textContent);
-      };
-
-</script>-->
-
+<script type="text/javascript">
+var windowGuide = null; // variable globale
+function openGuidePopUp() {
+  if(windowGuide == null || windowGuide.closed)
+  /* si le pointeur vers l'objet window n'existe pas
+     ou s'il existe mais que la fenêtre a été fermée */
+  {
+    windowGuide = window.open("/guide",
+   "Guide", "popup");
+    /* on le crée. La nouvelle fenêtre sera créée et affichée
+       par-dessus les éventuelles autres fenêtres. */
+  }
+  else
+  {
+    windowGuide.focus();
+    /* sinon la référence existe et la fenêtre n'est pas fermée
+       on peut donc l'amener devant avec la méthode focus()
+       sans avoir à recréer la fenêtre ou à recharger la
+       ressource référencée. */
+  };
+}
+</script>
 
 </html>
