--- a/backend/views/cart.ejs
+++ b/backend/views/cart.ejs
@@ -90,35 +90,35 @@
       }
 
       .play-zone {
-        background: red;
         padding:.5em;
         display:flex;
         justify-content: space-between;
+        background:rgba(167, 167, 167, 0.668);
       }
 
       .play-left {
         padding:.5em;
-        background: orangered;
         display:flex;
         width:50%;
+        border:2px solid;
       }
 
       .play-right {
         padding:.5em;
-        background: blue;
         display:flex;
         width:50%;
         flex-direction: column;
         align-content: stretch;
+        border:2px solid;
       }
 
       .play-left-characters {
         justify-content: center;
-        background: blueviolet;
         width: 100%;
         height: auto;
         overflow-y: auto;
         overflow-x: auto;
+        background :white;
       }
 
       .play-right-background{
@@ -130,48 +130,60 @@
 
       .play-right-stats{
         padding:.5em;
-        background: yellow;
         display:flex;
         flex-direction: row;
         width:100%;
         height:100%;
         overflow-y: auto;
+        border-color: black;
+        border:5px solid;
+        background :white;
       }
 
       
 
       .play-right-stats-summon{
         padding:.5em;
-        background: yellowgreen;
         display:flex;
         width:100%;
         height:100%;
         align-items: center;
         align-self:stretch;
+        border:2px solid;
       }
 
       .play-right-stats-summon-cost{
-        padding:4px;
-        border:2px solid;
-        height: fit-content;
-        width: fit-content;
-        background-color: blue;
+        margin:5px;
+        border-radius: 20px;
+        background:red;
+        border:2px;
         color: white;
-        display: flex;
+        padding:5px;
+        text-align: center;
+      }
+
+      .play-right-stats-summon-button{
+        border: 0;
+        margin:5px;
+        color: #fff;
+        border-radius: 20px;
+        background:red;
+        border:2px;
+        padding:5px;
+        align-items:center;
       }
 
       .play-right-stats-money{
         padding:.5em;
-        background: cornflowerblue;
         display:flex;
         flex-direction: column;
         width:100%;
         height:100%;
+        border:2px solid;
       }
 
       .play-right-stats-money-golds{
         padding:.5em;
-        background: grey;
         display:flex;
         width:100%;
         height:100%;
@@ -179,7 +191,6 @@
 
       .play-right-stats-money-diamonds{
         padding:.5em;
-        background: aqua;
         display:flex;
         width:100%;
         height:100%;
@@ -187,16 +198,15 @@
 
       .play-right-stats-moneypersec{
         padding:.5em;
-        background: indianred;
         display:flex;
         flex-direction: column;
         width:100%;
         height:100%;
+        border:2px solid;
       }
 
       .play-right-stats-moneypersec-golds{
         padding:.5em;
-        background: aquamarine;
         display:flex;
         width:100%;
         height:100%;
@@ -204,14 +214,16 @@
 
       .play-right-stats-moneypersec-diamonds{
         padding:.5em;
-        background: antiquewhite;
         display:flex;
         width:100%;
         height:100%;
       }
 
       .gold-icon,.diamonds-icon{
-        height:30px;width:30px;object-fit:contain;
+        height:30px;
+        width:30px;
+        object-fit:contain;
+        margin: 2px;
       }
 
       .gold-icon{
@@ -270,7 +282,7 @@
       .invocation-table th {
           border: 1px solid #ddd;
           padding: 8px;
-          width: 102px;
+          width: 103px;
       }
 
       .invocation-table tr:nth-child(even) {
@@ -385,8 +397,6 @@
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 
-    <!-- Template Main CSS File -->
-    <!-- <link href="assets/css/main2.css" rel="stylesheet"> -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"> </script>
 
 
@@ -464,11 +474,12 @@
           <div class="play-right-stats">
             <div class="play-right-stats-summon">
               <div class="play-right-stats-summon-cost" id="coutInvocation">
-                cout?
+                100 Diamants
               </div>
               <div id="app">
-                <button style="background: v ar(--color-primary);border: 0; margin:5px; color: #fff; border-radius: 20px; background:red; border:2px" v-on:click="invocationHeros()">Invocation +</button>
-                <!-- <p> Appuyer sur le bouton pour déclencher une invocation. Inspecter la page pour voir les console.log. </p> -->
+                <button class="play-right-stats-summon-button" v-on:click="invocationHeros()">
+                    + Invocation +                  
+                </button>
               </div>
             </div>
             <div class="play-right-stats-money">
@@ -488,34 +499,29 @@
               </div>
             </div>
             <div class="play-right-stats-moneypersec">
-              <!-- <input id="1diamant" type="button" value="+1 diamant/s" onclick="diamantPS=diamantPS+1" style="width:fit-content;height: fit-content;"> -->
               <div class="play-right-stats-moneypersec-golds">
-                <div class="gold-icon">
-                  <img src="assets/img/gold.png">
-                </div>
-                <p id="totalGoldPS"/>
+                <button style="border:0px;background:white;" onclick="goldPS=goldPS+1">
+                  <div class="gold-icon">
+                    <img src="assets/img/gold.png">
+                  </div>
+                </button>
+                <p id="totalGoldPS">
                 <p>&ThinSpace; Gold(s)/s</p>
               </div>
               <div class="play-right-stats-moneypersec-diamonds">
-                <div class="diamonds-icon">
-                  <img src="assets/img/diamond.png">
-                </div>
-                <p id="totalDiamantPS"/>
+                <button style="border:0px;background:white;" onclick="diamantPS=diamantPS+1">
+                  <div class="diamonds-icon">
+                    <img src="assets/img/diamond.png">
+                  </div>
+                </button>
+                
+                <p id="totalDiamantPS">
                 <p>&ThinSpace; Diamant(s)/s</p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <!-- <div class="character-image" style="background-image: url('assets/img/stickman.jpg')"></div>
-        <div class="character-info">
-              <div class="character">
-              <div class="character-name">Personnage 1</div>
-              <div class="character-stats">Niveau: 10</div>
-              <div class="character-stats">Gold/s: 100</div>
-              <div class="character-stats">Diamants/s: 50</div>
-        </div>
-      </div> -->
     </div>
 
 
