Upgrade problème d'argent réglé et console.log enlevé

--- a/backend/views/cart.ejs
+++ b/backend/views/cart.ejs
@@ -611,7 +611,6 @@
 
           },
           niveauMax: function(niveau) {
-          console.log(!(niveau < 6));
             return (niveau < 6);
           }
         },
@@ -675,24 +674,16 @@ const joueur = new Vue({ //Vue du joueur
           },
 
           modifierCout: function(id_hero,cout) {
-          console.log("PWET modifierCout");
-          console.log(cout);
             for (const herosObtenu of joueur.herosObtenus) {//Parcours de herosObtenus
               if(herosObtenu['id_hero'] == id_hero) {
                 herosObtenu['cout'] = cout;
-                console.log("herosObtenu['cout'] = "+herosObtenu['cout']);
               }
             }
           },
 
           goldParSecComputed: function(id_hero,niveau) {
             for (const herosObtenu of joueur.herosObtenus) {//Parcours de herosObtenus
-              console.log("herosObtenu.id_hero : "+herosObtenu['id_hero']);
-              console.log("id_hero : ");
-              console.log(id_hero);
-              console.log(niveau);
               if(herosObtenu['id_hero'] == id_hero) {//Comparaison des id qui sont uniques
-                console.log("herosObtenu['niveau_'+herosObtenu['niveau']] :"+herosObtenu['niveau_'+herosObtenu['niveau']]);
                 return herosObtenu['niveau_'+herosObtenu['niveau']];
               }
             }
@@ -700,10 +691,8 @@ const joueur = new Vue({ //Vue du joueur
           diamondParSecComputed: function(id_hero,niveau) {
             for (const herosObtenu of joueur.herosObtenus) {//Parcours de herosObtenus
               if(herosObtenu['id_hero'] == id_hero) {//Comparaison des id qui sont uniques
-                console.log("herosObtenu['niveau_'+herosObtenu['niveau']] :"+herosObtenu['niveau_'+herosObtenu['niveau']]) / 10;
                 let temp = herosObtenu['niveau_'+herosObtenu['niveau']];
                 temp = temp / 10;
-                console.log("temp : "+temp);
                 return temp;
               }
             }
@@ -721,8 +710,7 @@ $.ajax({
   type: 'GET',
   url: '/cart/initialisationHerosObtenus',
   success: function(received) {
-    console.log("Pweeeet initialisationHerosObtenus");
-    console.log(received);
+
     let tabHerosObtenus = received;
     //joueur.herosObtenus = received; //Sauvegarde des héros de la db dans herosObtenus
     if (tabHerosObtenus.length == 0) {
@@ -730,13 +718,8 @@ $.ajax({
              type: 'GET',
              url: '/cart/initialisationHeros1',//Obtention d'un héros au hasard qui a la rareté demandée
              success: function(received) {
-             console.log("Pweeeeet fin initialisationHeros1");
                let tabHero = received;
-               console.log("tabHeros : ");
-               console.log(tabHero);
                joueur.herosObtenus.push(tabHero);
-              console.log(joueur.herosObtenus);
-
               },
              error: function() {
                alert('Problème AJAX');
@@ -749,16 +732,8 @@ $.ajax({
              url: '/cart/initialisationHerosObtenuscoutEvolution',//Obtention d'un héros au hasard qui a la rareté demandée
              data:"niveau="+row.niveau,//Envoie de la rareté
              success: function(received) {
-//                console.log("tabHerosObtenus[row].niveau : ");
-//                console.log(tabHerosObtenus[row].niveau);
-//                console.log("Pweeeet Fin initialisationHerosObtenuscoutEvolution");
-//                console.log(received);
                let cout = received;
                row.cout = cout;
-//                console.log("tabHerosObtenus[row] : ");
-//                console.log(tabHerosObtenus[row]);
-//               joueur.herosObtenus.push(row);
-//                console.log(joueur.herosObtenus);
               },
              error: function() {
                alert('Problème AJAX');
@@ -770,11 +745,6 @@ $.ajax({
           url: '/cart/initialisationHerosObtenusguidePerso',//Obtention d'un héros au hasard qui a la rareté demandée
           data:"id_hero="+row.id_hero,//Envoie de la rareté
           success: function(received) {
-            console.log("row.id_hero : ");
-            console.log(row.id_hero);
-            console.log("Pweeeet Fin initialisationHerosObtenusguidePerso");
-            console.log(received);
-            console.log("row : "+row);
             let herosGuidePerso = received;
             row.rarete = herosGuidePerso.rarete;
             row.niveau_1 = herosGuidePerso.niveau_1;
@@ -782,11 +752,7 @@ $.ajax({
             row.niveau_3 = herosGuidePerso.niveau_3;
             row.niveau_4 = herosGuidePerso.niveau_4;
             row.niveau_5 = herosGuidePerso.niveau_5;
-            console.log("row : ");
-            console.log(row);
             joueur.herosObtenus.push(row)
-            console.log("joueur.herosObtenus");
-            console.log(joueur.herosObtenus);
           },
           error: function() {
             alert('Problème AJAX');
@@ -803,16 +769,12 @@ const app = new Vue({ //Vue qui gère les invocations de héros
         el:"#app",
         methods:{
           invocationHeros: function() { //Invocation de heros
-             console.log("Pweeeet debut");
-             console.log(totalGold.textContent);
 
              $.ajax({
                type: 'POST',
                url: '/cart/diamantSuffisant',//Vérifie si le joueur a assez de diamants pour faire une invocation
                data: "diamant="+diamant,//Envoie des diamants
                success: function(received) {
-                 console.log("Pweeeet diamantSuffisant");
-                 console.log(received);
                  if (received) { //Si on a assez de diamant
                     diamant-=100;
                     let rarete = "";
@@ -820,28 +782,19 @@ const app = new Vue({ //Vue qui gère les invocations de héros
                         if (status == "error") {
                           alert('erreur' + xhr.status + " " + xhr.statusText);
                         } else {
-                            console.log("data : "+data);
                             rarete = data; //Sauvegarde de la rareté obtenue
-                            console.log("rarete finale : "+rarete);
                             $.ajax({
                             type: 'POST',
                             url: '/cart/triParRarete',//Obtention d'un héros au hasard qui a la rareté demandée
                             data:"rarete="+rarete,//Envoie de la rareté
                             success: function(received) {
-                              console.log("Pweeeet Fin triParRarete");
-                              console.log(received);
                               let heros = received; //Sauvegarde du héros
-                              console.log(heros['rarete']);
-                              console.log(joueur.possedeHeros(heros));
                               if (joueur.possedeHeros(heros)) { //Si le joueur possède déjà le héros
-                                  console.log("Remboursement en cours."); //On rembourse le joueur d'un montant X selon la rareté
                                   $.ajax({
                                   type: 'POST',
                                   url: '/cart/remboursement',//Obtention d'un héros au hasard qui a la rareté demandée
                                   data:"rarete="+heros['rarete'],//Envoie de la rareté
                                   success: function(received) {
-                                    console.log("Pweeeet Fin remboursement");
-                                    console.log(received);
                                     diamant+=parseInt(received,10);
 
                                   },
@@ -856,13 +809,9 @@ const app = new Vue({ //Vue qui gère les invocations de héros
                                       url: '/cart/ajoutInfosInvocationHeros',//Obtention d'un héros au hasard qui a la rareté demandée
                                       data:"niveau="+heros['niveau'],//Envoie de la rareté
                                       success: function(received) {
-                                        console.log("Pweeeet Fin ajoutInfosInvocationHeros");
-                                        console.log(received);
                                         let cout = received;
                                         heros.cout = cout;
                                         joueur.herosObtenus.push(heros); //On ajoute le héros à herosObtenus
-                                        console.log("Ajout d'un heros.");
-                                        console.log(joueur.herosObtenus);
                                       },
                                       error: function() {
                                         alert('Problème AJAX');
@@ -890,9 +839,8 @@ const app = new Vue({ //Vue qui gère les invocations de héros
 
           },
           upgradeHeros: function(id_hero) {
-            console.log("totalGold : "+totalGold.innerText);
             let cout = joueur.obtenirCoutHeros(id_hero);
-            if (totalGold.innerText >= cout) {
+            if (gold >= cout) {
               joueur.augmenterNiveau(id_hero);
 
               $.ajax({
@@ -900,11 +848,8 @@ const app = new Vue({ //Vue qui gère les invocations de héros
                   url: '/cart/ajoutInfosInvocationHeros',//Obtention d'un héros au hasard qui a la rareté demandée
                   data:"niveau="+joueur.obtenirNiveau(id_hero),//Envoie de la rareté
                   success: function(received) {
-                    console.log("Pweeeet Fin ajoutInfosInvocationHeros");
-                    console.log("Received : "+received);
                     joueur.modifierCout(id_hero, received);
-                    console.log("Cout : "+joueur.obtenirCoutHeros(id_hero));
-                    totalGold.textContent-=parseInt(cout,10);
+                    gold-=parseInt(cout,10);
                   },
                   error: function() {
                     alert('Problème AJAX');
