--- a/backend/views/cart.ejs
+++ b/backend/views/cart.ejs
@@ -289,6 +289,9 @@
           background-color: #f2f2f2;
       }
 
+      .invocation-table td {
+      }
+
       .invocation-table th {
           padding-top: 0px;
           padding-bottom: 12px;
