--- a/backend/views/cart.ejs
+++ b/backend/views/cart.ejs
@@ -10,7 +10,7 @@
 
     <style>
       body {
-          background-image: url('assets/img/nature.jpg');
+          background-image: url('assets/img/background.jpg');
           background-size: cover;
           background-repeat: no-repeat;
           display: flex;
