--- a/backend/views/login.ejs
+++ b/backend/views/login.ejs
@@ -3,7 +3,7 @@
   <head>
   <style>
     body {
-      background-image: url('assets/img/nature.jpg');
+      background-image: url('assets/img/background.jpg');
       background-size: cover;
       display: flex;
       align-items: center;
